--- a/src/css/ProviderDetails.css
+++ b/src/css/ProviderDetails.css
@@ -1,56 +1,34 @@
-.provider-header {
-    border-bottom: 1px solid;
-    border-color: darkgray;
-		min-height: 100px;
-		max-height: 100px;
-		line-height: 120%;
-}
-
-.header{
+.provider-details {
+		
+	border-bottom: 1px solid;
+	border-color: darkgray;
 	min-height: 100px;
 	max-height: 100px;
+	padding-left: 16px;
+	line-height: 120%;
 }
 
-.provider-details {
-    border-left: 1px solid;
-    border-color: darkgray;
-    padding-left: 16px;
-    
-}
-
-.new-review-btn {
-    width: 100%;
-		margin-top: 10px;
-  	text-decoration: none;
-		background-color: #54BB9F;
-		border-color: #54BB9F;
-}
-
-.btn-primary:hover {
-	background-color: rgb(36, 68, 107) !important;
-}
-
-.provider-name{
+.provider-details-name{
 	font-size: 1.8rem;
 }
 
-.provider-speciality{
+.provider-details-speciality{
 	font-size: 1rem;
 }
 
-.provider-reviews{
+.provider-details-reviews{
 	font-size: 1rem;
 }
 
-.provider-address{
+.provider-details-address{
 	font-size: 1rem;
 }
 
-.addr-label{
+.provider-details-address-label{
 	font-size: .6rem;
 }
 
-.address-icon {
+.provider-details-address-icon {
 	position: absolute;
 	left:-50px !important;
 	top:25px;
@@ -58,6 +36,12 @@
 	width:50px !important;
 }
 
-.addr-details {
+.provider-details-address-details {
 	padding-left: 0px;
+}
+
+.provider-details-image {
+	width:80px !important;
+	margin-top: 10px;
+	margin-right: 10px;
 }
