--- a/src/css/ProviderListItem.css
+++ b/src/css/ProviderListItem.css
@@ -1,4 +1,4 @@
-.list-group-item {
+.provider-list-item {
 		border-left: 0px;
     border-color: darkgray;
     border-radius: 0px !important;
@@ -6,37 +6,37 @@
 		padding:0px !important;
 }
 
-.list-group-item:last-child {
+.provider-list-item:last-child {
     border-bottom: 0px;
 }
 
-.list-group-item:first-child {
+.provider-list-item:first-child {
     border-top: 0px;
 }
 
-.arrow-icon {
+.provider-list-item-arrow-icon {
 	height:28px !important;
 	width:28px !important;
 }
 
-.provider-list-image {
+.provider-list-item-image {
 	width: 90px;
 	margin-top: 8px;
 }
 
-.provider-list-info {
+.provider-list-item-info {
 	padding-left:90px;
 }
 
-.provider-list-item :hover{
+.provider-list-item :hover, .provider-list-item-image :hover{
 	text-decoration: none;
 	background-color:  rgb(187, 235, 223);
 }
-.selected-provider {
+.provider-list-item-selected-provider {
 	background-color:  rgb(187, 235, 223);
 }
 
-.provider-list-rank {
+.provider-list-item-rank {
 	font-size: .8rem;
 	color: white;
 	padding-top: 0px;
@@ -46,33 +46,33 @@
 	display:inline-block;
 }
 
-.rank1 {
+.provider-list-item-rank1 {
  background-color:rgb(233, 107, 107);
 }
 
-.rank2{
+.provider-list-item-rank2{
 	background-color:rgb(141, 141, 141);
 }
 
-.rank3{
+.provider-list-item-rank3{
 	background-color:#54BB9F;
 }
 
-.provider-list-name {
+.provider-list-item-name {
 	font-size: 1rem;
 	padding-top: 20px;
 }
 
-.provider-list-speciality {
+.provider-list-item-speciality {
 	font-size: 0.8rem;
 	display:inline-block;
 }
 
-.provider-list-street {
+.provider-list-item-street {
 	font-size: .8rem;
 }
 
-.provider-list-reviews {
+.provider-list-item-reviews {
 	font-size: .8rem;
 	padding-bottom: 40px;
 }
