--- a/src/css/DoctorReview.css
+++ b/src/css/DoctorReview.css
@@ -1,5 +1,6 @@
 .doctor-review-list-frame{
-    padding-right: 0px !important;
+		padding-right: 0px !important;
+		padding-left: 0px !important;
 }
 
 .doctor-review-detail-frame{
